
message Payload {
    enum Action {
        DEPOSIT = 0;
        WITHDRAW = 1;
        UPDATE_NUMBER = 2;
        ADD_ACCOUNT = 3;
        ADD_MERCHANT = 4;
    }

    required Action action = 1;

    required string name = 2;
    required uint32 number = 3;
    required string merchant_key = 4;
    optional sint32 amount = 5;
    optional uint32 new_number = 6;
    required uint64 timestamp = 7;
}